--- a/docs/Looksrare_Comprehensive_Review.mdx
+++ b/docs/Looksrare_Comprehensive_Review.mdx
@@ -2,35 +2,54 @@
 
 ![](https://i0.wp.com/nftnewstoday.com/wp-content/uploads/2022/03/looks-rare.png?fit=1200%2C675&ssl=1)
 
-## Introduction
+## Key Insights
 
-What is Looksrare/What does it do & Summary of this Review
+- insight 1
+- insight 2
 
-## Why Looksrare
+Summary of this Review
+
+## Background
+
+What is Looksrare/What does it do
+
+Project participants and Team behind the project
+
+## How Looksrare Works
 
 - Whitepaper walkthrough
-  - Economic model advantages and problems
+  (make graphs to explain)
+  - Economic model (make a graph to explain)
+  - Tokenomics
   - Project vision
     - Current progress
-- aside: Vampire attack (example: sushi vs. uni)
-- Project participants and Team behind the project and what are the right things they have done?
+    - what are the right things they have done?
+- Contract walkthrough
+  - Implementation details and highlights
+  - Potential problems
 
 ## Competitor Review
+
+(make graphs to explain)
 
 - How is it different from other NFT marketplaces (OpenSea, X2Y2, Gem.xyz, etc.)
   - Short review of OpenSea, X2Y2, Gem.xyz, etc.
   - Difference (pros and cons of Looksrare comparing to other platforms)
     - Business aspect
-    - on-chain data analysis
+    - on-chain data analysis (每个 project 的数据和整个 nft 市场的趋势做交叉分析)
     - code quality
 
-## Contract Walkthrough
+## Case Study: Vampire attack
 
-- Contract walkthrough
-  - Implementation details and highlights
-  - Potential problems
+- sushi vs. uni (vampire attack in defi shows that it won't work <-- prove this statement)
+- looksrare vs. opensea https://medium.com/the-coinbase-blog/vampire-attack-looksrare-vs-opensea-c3b4107cd4db
+- x2y2 vs. opensea (frontend is basically the same --> x2y2 doesn't seem legit)
 
-## Conclusion
+## Challenges and Opportunities
+
+- Economic model advantages and problems
+
+## Closing Thoughts
 
 Summary of the review and the main conclusion
 
