draft and outline

--- a/docs/Looksrare_Comprehensive_Review.mdx
+++ b/docs/Looksrare_Comprehensive_Review.mdx
@@ -7,23 +7,43 @@
 - insight 1
 - insight 2
 
-Summary of this Review
+In this report, we will examine Looksrare from a variety of aspects (what it does, how it works, a competitor analysis, problems and potentials of such NFT marketplaces) to see what we can learn from Looksrare. The target audience of this report is people with technical backgrounds who are interested in learning more about the current state of the Web3 and NFT industries from both technical and business perspectives.
 
 ## Background
 
-What is Looksrare/What does it do
+Before we dive into NFT marketplaces like Looksrare, let me briefly introduce NFT and current NFT market.
 
-Project participants and Team behind the project
+- What is Looksrare/What does it do
+
+https://mirror.xyz/mattbullish.eth/HiN9mtzqex0OVoURXCQZU6yLxmPal6md5qVnAk2K5v0
+
+https://mirror.xyz/0x58aB0DAffcC40E88fAbEA65D2609e14fEc2674aA/l1wyxBHSatK9t4xk2NhgUnALfxNgVbCM8eW5avSr2mQ
+
+- Project vision
+  - Current progress
+  - what are the right things they have done?
+
+https://www.business2community.com/nft/best-marketplaces/looksrare-review
+
+https://www.economywatch.com/cryptocurrency/nfts/best-marketplaces/looksrare-review
+
+https://www.fool.com/the-ascent/cryptocurrency/nfts/looksrare-nft-marketplace-review/
+
+https://mooning.com/looksrare-vs-opensea-a-review/
+
+https://nftnewstoday.com/2022/03/26/what-is-looksrare-marketplace/
+
+Project participants and Team behind the project https://mirror.xyz/mattbullish.eth/HiN9mtzqex0OVoURXCQZU6yLxmPal6md5qVnAk2K5v0
 
 ## How Looksrare Works
 
 - Whitepaper walkthrough
+  https://reurl.cc/X43jkM
+  https://docs.looksrare.org/
   (make graphs to explain)
   - Economic model (make a graph to explain)
   - Tokenomics
-  - Project vision
-    - Current progress
-    - what are the right things they have done?
+  - EIP-712 and ERC-2981
 - Contract walkthrough
   - Implementation details and highlights
   - Potential problems
@@ -33,17 +53,32 @@ Project participants and Team behind the project
 (make graphs to explain)
 
 - How is it different from other NFT marketplaces (OpenSea, X2Y2, Gem.xyz, etc.)
-  - Short review of OpenSea, X2Y2, Gem.xyz, etc.
-  - Difference (pros and cons of Looksrare comparing to other platforms)
-    - Business aspect
-    - on-chain data analysis (每个 project 的数据和整个 nft 市场的趋势做交叉分析)
-    - code quality
+  (community based, actively updating)
+  - 对 UI 的更新和上心程度 https://twitter.com/LooksRare/status/1565356794138230784?s=20&t=20j-YnQqU0MV1zzyfnmDVA
+  - 版税的支持 https://twitter.com/LooksRareCN/status/1563174479739490304?s=20&t=2URH9FRzFEjm_jn3gRXU8Q 什么是 Nft 版税 https://zhuanlan.zhihu.com/p/467412129
+- Short review of OpenSea, X2Y2, Gem.xyz, etc.
+
+  - Looksrare vs. Opensea https://mooning.com/looksrare-vs-opensea-a-review/ https://onxrp.com/analysis-of-nft-marketplaces/
+    - opensea 为什么能成为巨头 讲讲发展史
+  - x2y2
+
+    - https://twitter.com/sophia56169583/status/1565911044769189888?s=20&t=c91hHwOyKXU0sbwv_O_YxQ
+    - ama https://mirror.xyz/x2y2.eth/bU2wOZqyrazeiFs3LLlSpvKDtpRm3AbuQvrO0jyH7B0
+    - https://docs.x2y2.io/guides/about-x2y2 whitepaper
+    - https://medium.com/p/d09130e498f3 https://mirror.xyz/cryptoscott.eth/rYrs2FCECVth3ArKnpp-ROkFDWGdYmhTAQmC_U-cZC4
+    - https://mirror.xyz/0xE8C078C600132AB68685eA06a5f7C7bC1A349b76/BToO2gTWIaqaqstwZHMUYOJaVEUkkQEGH8kkvGKK_R4
+
+- Difference (pros and cons of Looksrare comparing to other platforms)
+  - Business aspect
+  - on-chain data analysis (每个 project 的数据和整个 nft 市场的趋势做交叉分析)
+  - code quality
 
 ## Case Study: Vampire attack
 
-- sushi vs. uni (vampire attack in defi shows that it won't work <-- prove this statement)
+- sushi vs. uni (vampire attack in defi shows that it won't work --> prove this statement)
 - looksrare vs. opensea https://medium.com/the-coinbase-blog/vampire-attack-looksrare-vs-opensea-c3b4107cd4db
 - x2y2 vs. opensea (frontend is basically the same --> x2y2 doesn't seem legit)
+  https://www.youtube.com/watch?v=dkp2D3sY1fE&ab_channel=PlayerM
 
 ## Challenges and Opportunities
 
@@ -52,6 +87,11 @@ Project participants and Team behind the project
 ## Closing Thoughts
 
 Summary of the review and the main conclusion
+
+opensea 前期也不好过,所以不一定要悲观看待现在的 looks
+
+- looksrare v2 https://docs.looksrare.org/blog/space-recap-things-you-should-know
+- looksrare v2 https://twitter.com/Looksfans/status/1535149597651513344
 
 ---
 
@@ -62,3 +102,6 @@ Summary of the review and the main conclusion
 ## References
 
 [1] Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus vitae congue mauris rhoncus. Pellentesque massa placerat duis ultricies lacus sed turpis tincidunt id.
+
+Preview image source: [LOOKSRARE MARKETPLACE: WHAT IS ALL THE HYPE
+ABOUT?](https://nftnewstoday.com/2022/03/26/what-is-looksrare-marketplace/)
