--- a/docs/Looksrare_Comprehensive_Review.mdx
+++ b/docs/Looksrare_Comprehensive_Review.mdx
@@ -1,97 +1,428 @@
-# Looksrare Comprehensive Review
+# LooksRare Comprehensive Review
 
-![](https://i0.wp.com/nftnewstoday.com/wp-content/uploads/2022/03/looks-rare.png?fit=1200%2C675&ssl=1)
+![](https://www.exodus.com/img/news/content/2022/08/B639-1900.jpeg)
 
-## Key Insights
+## Introduction
 
-- insight 1
-- insight 2
-
-In this report, we will examine Looksrare from a variety of aspects (what it does, how it works, a competitor analysis, problems and potentials of such NFT marketplaces) to see what we can learn from Looksrare. The target audience of this report is people with technical backgrounds who are interested in learning more about the current state of the Web3 and NFT industries from both technical and business perspectives.
+In this report, we will examine LooksRare from a variety of aspects (what it does, how it works, a competitor analysis, problems and potentials of such NFT marketplaces) to see what we can learn from LooksRare. The target audience of this report is people with technical backgrounds who are interested in learning more about the current state of the Web3 and NFT industries from both technical and business perspectives.
 
 ## Background
 
-Before we dive into NFT marketplaces like Looksrare, let me briefly introduce NFT and current NFT market.
+Before we dive into NFT marketplaces like LooksRare, let me briefly introduce NFT and NFT marketplaces.
 
-- What is Looksrare/What does it do
+**NFT (Non-Fungible Token)**: What is it? To answer this question, we should learn about **Fungible Tokens** to understand its antonym. According to Larousse, "things that are consumed by usage and can be replaced by things of the same kind, the same quality and the same quantity" are considered **fungible**. For example, in the blockchain ecosystem, Sandbox's [$SAND tokens](https://www.sandbox.game/en/about/sand/) are **fungible** and will always have the same value if they are swapped with one other. They can be used to buy [LANDs](https://www.sandbox.game/en/about/land/) in the Sandbox, which are **nonfungible**.
 
-https://mirror.xyz/mattbullish.eth/HiN9mtzqex0OVoURXCQZU6yLxmPal6md5qVnAk2K5v0
+![](https://www.sandbox.game/img/18_Land/step2.png)
 
-https://mirror.xyz/0x58aB0DAffcC40E88fAbEA65D2609e14fEc2674aA/l1wyxBHSatK9t4xk2NhgUnALfxNgVbCM8eW5avSr2mQ
+<div style={{ textAlign: "center" }}>(Image: NFT LAND in THE SANDBOX)</div>
 
-- Project vision
-  - Current progress
-  - what are the right things they have done?
+An NFT (Non-Fungible Token) is a piece of data that is stored on a blockchain that guarantees a cryptographic asset is **unique** and hence not interchangeable while also providing a unique digital certificate of ownership for the NFT. In a broader sense, an NFT records the **"provenance"** of the assigned digital object, providing unquestionable answers to issues like who produced, possessed, and owned the NFT in the past, as well as which of the numerous copies is the original. Photos, films, and audio can all be associated with an NFT as digital objects of **various forms**. In a variety of contexts, including gaming, art, and sports collectibles, NFTs are currently being utilized to commercialize digital artifacts. NFTs were initially a component of the Ethereum blockchain, but more and more blockchains are now adopting their own versions of NFTs.
 
-https://www.business2community.com/nft/best-marketplaces/looksrare-review
+**NFT Marketplace**: As implied by the name, it is a platform where NFTs can be **shown**, **traded**, and in some cases **created** (**minted**). Similarly to how Amazon or eBay are to products, these marketplaces are to NFTs. Although there are different types of NFT marketplaces for different forms of NFT, we will focus on universal NFT marketplaces (i.e., marketplaces that have any sort of NFT collection) like **LooksRare** and **OpenSea** in this report. If you are interested in learning more about NFT and NFT marketplaces, read [this](https://arounda.agency/blog/nft-marketplace-what-is-it-and-what-are-the-latest-trends) and [this](https://www.coindesk.com/tech/2021/07/12/nft-marketplaces-a-beginners-guide/).
 
-https://www.economywatch.com/cryptocurrency/nfts/best-marketplaces/looksrare-review
+## What is LooksRare
 
-https://www.fool.com/the-ascent/cryptocurrency/nfts/looksrare-nft-marketplace-review/
+--- need quillbot
 
-https://mooning.com/looksrare-vs-opensea-a-review/
+LooksRare is the community-first NFT marketplace, branding itself as a platform “by NFT people, for NFT people”. Since its launch in January 11th this year, LooksRare captured a lot of attention in the NFT space, mainly because we could say that unlike VC-backed OpenSea it truly adheres to the Web3 principles giving back to the users with rewarding them for activity and staking its own token [$LOOKS](https://coinmarketcap.com/currencies/looksrare/). It quickly attracted attention in terms of both [trading volumes](https://dune.xyz/queries/344872/657053?Aggregation=Days) (a lot of noise coming from wash trading) and [protocol profitability](https://twitter.com/tokenterminal/status/1488569340286967815/photo/1).
 
-https://nftnewstoday.com/2022/03/26/what-is-looksrare-marketplace/
+LooksRare **aims** to actively reward traders, collectors and creators for participating. There are several types of rewards:
 
-Project participants and Team behind the project https://mirror.xyz/mattbullish.eth/HiN9mtzqex0OVoURXCQZU6yLxmPal6md5qVnAk2K5v0
+- LOOKS Staking to Earn **Platform Fees**: LOOKS token stakers earn 100% of the trading fees (in WETH) on LooksRare.
+- **Listing Rewards**: LooksRare's Listing Rewards program enables NFT collectors and traders to earn LOOKS tokens just by listing NFTs for sale on LooksRare.
+- **Trading Rewards**: Trade any NFT on LooksRare, Earn LOOKS tokens.
+- **LOOKS Staking Rewards**: When you stake LOOKS, you also earn additional LOOKS on top of the trading fee rewards received in WETH.
+- **Liquidity Provider Rewards** (Discontinued since 2022/02/15, 10:15 AM (UTC)): LooksRare is incentivizing liquidity for the LOOKS token by giving rewards for users that stake LOOKS-ETH UniV2 LP tokens. The announcement for the discontinuation is [here](https://docs.looksrare.org/blog/looks-emission-phase-2#changes-to-lp-staking-rewards).
 
-## How Looksrare Works
+There were also a LOOKS token airdrop as part of LooksRare's initial launch. The airdrop aims to attract users who have transacted **>3ETH** worth of NFTs on **OpenSea** between 16 Jun and 16 Dec, 2021. The details of token allocation can be found [here](https://docs.looksrare.org/guides/faqs/what-is-the-looks-airdrop). Incentivizing this group of valuable users can naturally attract them to list and trade NFTs on LooksRare so that the trading volume could increase. This go-to-market approach of attracting users from an existing platform into a competing one by offering some kind of incentive (typically tokens) is known as "[Vampire Attack](https://omerkeman.medium.com/what-is-a-vampire-attack-in-crypto-fdfc5e1fc5fc)".
 
-- Whitepaper walkthrough
-  https://reurl.cc/X43jkM
-  https://docs.looksrare.org/
-  (make graphs to explain)
-  - Economic model (make a graph to explain)
-  - Tokenomics
-  - EIP-712 and ERC-2981
-- Contract walkthrough
-  - Implementation details and highlights
-  - Potential problems
+The detailed analysis of rewards and airdrop will be in the "**How LooksRare Works**" section below.
+
+The rewards and incentives mentioned above successfully boosted trading on LooksRare at first as shown in the graph.
+
+<iframe
+  style={{ width: "100%", height: "400px" }}
+  src="https://dune.com/embeds/344872/657053/8a5fc817-e616-4db7-95b5-192ae64f4bb3"
+></iframe>
+<div style={{ textAlign: "center" }}>
+  (Graph: LooksRare Volume without wash trades filtered)
+</div>
+
+However, people found opportunities to capture the rewards through [wash trading](https://www.investopedia.com/terms/w/washtrading.asp). In this context, it means the same person trade the NFTs via his own different wallets to capture the trading rewards. The following graph shows the trading volume with wash trading filtered is drastically smaller. The method of applying this filter and why the numbers are shockingly different were explained by Web3 data scientist Hildobby [here](https://twitter.com/hildobby_/status/1489706897259175948?s=20&t=u9zLiHpij4TriNIpjkgs3g).
+
+<iframe
+  style={{ width: "100%", height: "400px" }}
+  src="https://dune.com/embeds/344872/657053/8a5fc817-e616-4db7-95b5-192ae64f4bb3?Wash+Trades+Filter_e15077=ON"
+></iframe>
+<div style={{ textAlign: "center" }}>
+  (Graph: LooksRare Volume with wash trades filtered)
+</div>
+
+There are multiple problems caused with wash trading from setting the wrong incentives for the users to distorting the numbers, however I agree with the [argument](https://twitter.com/dingalingts/status/1481135479940874241) that such mechanic if temporary in nature is proportional to vampire a network effect and take a chunk of OpenSea volume that daily generates millions of USD in fees. LooksRare approaches the wash trading as risky for the traders as they do not know how much volume other traders are going to make. Looksrare also added in the interview that they intend to make such practices unprofitable in the future without any further details.
+
+<Tweet id="1481135479940874241" />
+
+Let's have a quick look at the **team** and what they get from this project.
+
+- Two anons known as Guts and [Zodd](https://twitter.com/ZoddLooksRare) have built the platform in 28 (currently, 14 previously) people team. According to the [interview with The Block](https://www.theblockcrypto.com/news+/132031/why-two-nft-nerds-built-looksrare-and-where-they-want-to-take-it-next) the co-founders are “NFT nerds” that are active in the NFT space for a long time under different pseudonyms. They could not fork OpenSea to achieve what they wanted and they created LooksRare based on their frustration with current NFT marketplaces. The team said that they coded the marketplace's smart contracts in modular way that will allow them to make big changes at rapid pace. They also have an intention to support L2 networks that would allow for cheaper and faster transactions. The team is active and does a lot of [polishing in terms of UX](https://twitter.com/LooksRareNFT/status/1489602374175846401), makes a [steady progress](https://twitter.com/ZoddLooksRare), and actively [hiring](https://docs.looksrare.org/about/category/hiring) for various positions.
+- As the team also owns the token, they are incentivized to keep building the platform and improve the product, as the value of the token is hinges on the transaction volume/fee of the platform. We can also see the commitment of the team through the vesting schedule. The team is not receiving any LOOKS tokens until half a year. This signals the team actually plans to build the platform instead of a pump & dump project. The token emission schedule and token allocation will be analyzed in "**Tokenomics**" under "**How LooksRare Works**" section as well.
+- Although the team stays anonymous, we can infer that there are Chinese members participated in this project directly as the Docs, website, Discord only supported English and Chinese at the beginning.
+
+## How LooksRare Works
+
+--- need quillbot
+
+To understand how LooksRare works, we can first learn its LOOKS token, which is the most important system behind it and makes it stand out from OpenSea.
+
+![](https://miro.medium.com/max/1400/0*k7Fiq0rBaPl9dgPY.png)
+
+<div style={{ textAlign: "center" }}>(Image: LOOKS Token Allocation)</div>
+
+|                          | **Percentage of supply** | **Total LOOKS**   |
+| :----------------------: | :----------------------: | ----------------- |
+|       **Airdrop**        |           12%            | 120,000,000       |
+|    **Strategic Sale**    |           3.3%           | 33,083,003        |
+| **Liquidity Management** |           1.7%           | 16,916,997        |
+|    **Volume Rewards**    |          44.1%           | 441,000,000       |
+|   **Staking Rewards**    |          18.9%           | 189,000,000       |
+|    **Founding Team**     |           10%            | 100,000,000       |
+|       **Treasury**       |           10%            | 100,000,000       |
+|     **Total Supply**     |         **100%**         | **1,000,000,000** |
+
+The above shows the token allocation between the team, the investors, the protocol and the community. Focusing on the **community** token:
+
+**Airdrop**: 12% (120M) of the token is used in Airdrop.
+
+<iframe
+  style={{ width: "100%", height: "400px" }}
+  src="https://dune.com/embeds/342263/652201/3b351357-871f-4210-959b-953938ca65e3"
+></iframe>
+<div style={{ textAlign: "center" }}>
+  (Graph: Number of claimed LOOKS token airdrop)
+</div>
+
+<iframe
+  style={{ width: "100%", height: "400px" }}
+  src="https://dune.com/embeds/342263/652200/2efa00a6-5e4e-46be-868f-41ba9a6b0164"
+></iframe>
+<div style={{ textAlign: "center" }}>
+  (Graph: Number of claimed eligible addresses)
+</div>
+
+At the time of writing, `67.31% (124,665/185,223)` of eligible addresses have claimed `81.97% (98,366,481/120,000,000)` of LOOKS airdrop. For more stats for the Airdrop, have a look at this [stats](https://dune.xyz/hildobby/LOOKS-Airdrop). As we discussed earlier, airdroping this group of valuable users incentives them to list and trade NFTs on LooksRare, which can boost trading in the marketplace.
+
+**Staking rewards**: 18.9% (189M) of the tokens are distributed as staking rewards.
+
+In the short run, on top of the trading fee that you could earn when you stake LOOKs, you could also earn an extra staking rewards distribution from the project. This serves as the extra incentive for people to stake LOOKS at the early stage of the project. This is also why we could see a staking reward goes up to 1000%. In fact, roughly half of the staking reward comes from the staking rewards (LOOKS), while another half comes from the trading fees (WETH). The rewards are shared proportionally among the stakers, and hence as user number increases the APR return gradually decreases.
+
+When you stake LOOKS, you also earn additional LOOKS on top of the trading fee rewards received in WETH. Staked LOOKS tokens are [auto-compounded](https://docs.looksrare.org/about/rewards/looks-staking-rewards#what-does-auto-compounding-mean) for users that wish to just leave their LOOKS tokens staked. The calculation of staking rewards has a fairly simple formula (Actually, the math of LooksRare so far is always simple. We will discuss its pros and cons later):
+
+User A's LOOKS **staking rewards** per block are calculated by: `LOOKS per block * (LOOKS staked by User A / Total amount of staked LOOKS)`
+
+**Example**
+
+- User A stakes 10,000 LOOKS during Phase A
+- The total amount of staked LOOKS is now 1,000,000 LOOKS
+
+Based on the above, User A would receive: `189 * (10,000 / 1,000,000) = 1.89 LOOKS per block`
+
+| **PHASE** |         **Length**          | **LOOKS Per Block** | **LOOKS Per Day** |
+| :-------: | :-------------------------: | ------------------- | ----------------- |
+|     A     |  195,000 blocks (30 days)   | 189.00 LOOKS        | 1,228,500.00      |
+|     B     |  585,000 blocks (90 days)   | 89.775 LOOKS        | 583,537.50        |
+|     C     | 1,560,000 blocks (240 days) | 35.4375 LOOKS       | 230,343.75        |
+|     D     | 2,346,250 blocks (361 days) | 18.90 LOOKS         | 122,850.00        |
+
+LOOKS staking rewards will be earned over 4 phases with differing reward rates, based on a schedule of 6,500 Ethereum blocks per day.
+
+**Trading rewards**: 44.1% (441M) of the tokens are distributed as trading rewards.
+
+Trading rewards are a core part of LooksRare's token economy as it seeks to become the most liquid marketplace for NFTs in the world. Users who trade any NFTs on LooksRare earn trading rewards in the form of LOOKS, LooksRare's platform token. Both the buyer and seller of an item earn rewards for their trading volume (except for private sales). Trading rewards are calculated daily and rewarded to users 2 hours after the end of each day.
+
+Similarly, there are extra trading rewards to those early adopters and trade NFTs via LooksRare. The distribution follows the below schedule and runs out in 721 days.
+
+| **PHASE** |         **Length**          | **LOOKS Per Day For Trading Rewards** |
+| :-------: | :-------------------------: | ------------------------------------- |
+|     A     |  195,000 blocks (30 days)   | 2,866,500.00                          |
+|     B     |  585,000 blocks (90 days)   | 1,361,587.50                          |
+|     C     | 1,560,000 blocks (240 days) | 537,468.75                            |
+|     D     | 2,346,250 blocks (361 days) | 286,650.00                            |
+
+Every day, trading rewards are calculated based on each user's trading volume on LooksRare, as a percentage of the total platform trading volume, excluding private sales.
+
+`User A's trading rewards on Day 1 = c * a / b`
+
+Where:
+
+- a = User A's Trading Volume During Day 1
+- b = Total Platform Trading Volume During Day 1
+- c = LOOKS Rewards Per Day
+
+**Example**
+
+- User A trades 10 ETH worth of NFTs on Day 1
+- There is 10,000 ETH total volume on LooksRare on Day 1
+
+Based on the above, on Day 1, User A would receive: `2,866,500 * (10 / 10,000) = 2,866.5 LOOKS`
+
+**Platform Fees**: LooksRare collects a basic sales fee of 2% (in WETH) on all NFT sales excluding private sales. All the WETH collected from these fees are consolidated at the end of each recurring 6,500 Ethereum block period (roughly 24 hours) and then **distributed to LOOKS stakers in a linear format per block over the next 6,500 block period**.
+
+**Active and Passive Staking**:
+
+The rewards for each day are calculated at the end of the previous period, then split between Active and Passive stakers before they're distributed. **The main difference between Active and Passive stakers is that LOOKS in passive staking do NOT earn additional LOOKS while staked**. **Active stakers** are the majority of stakers, whose staked LOOKS tokens are fully unlocked. **Passive stakers** are stakers whose LOOKS tokens are locked for trading but unlocked for staking: namely Team, Treasury and Strategic sale tokens (which unlock over time - [read more](https://docs.looksrare.org/about/looks-tokenomics)).
+
+At the start of each 6,500 block period, **a portion of the WETH fees** collected from the previous 6,500 blocks are sent to the Passive Staking address. The amount is calculated as: `c * a / b`
+
+Where:
+
+- a = Total amount of LOOKS staked passively at start of period
+- b = Total amount of LOOKS staked at start of period (passive + active)
+- c = Amount of WETH fees from previous 6,500 blocks
+
+The remaining WETH is then sent to the Active Staking Pool.
+
+**How is WETH fee sharing calculated for Active LOOKS stakers?**
+
+For each 6,500 block period, the amount of WETH rewards to be distributed in each block to active stakers is calculated by: `Total WETH collected as fees in the prior 6500 block period / 6500`. Each user's amount of staked LOOKS at each block is then compared against the total amount of LOOKS staked at each block, with this being done at every block within the 6,500 block period to find the total amount of WETH rewards received.
+
+**Example**
+
+- Let's assume LooksRare processes 10,000 WETH of non-private sale volume in the first 6,500 blocks after launch, collecting total fees of 200 WETH.
+- At block #6500, User A stakes 10,000 LOOKS in preparation to start earning WETH at block #6501.
+- At block #6501,
+  - The amount of passive tokens staked is 10% of the total amount of tokens staked, meaning 20 WETH (10% \* 200) is sent to the passive staking address.
+  - The remaining 180 WETH is put into the active LOOKS staking pool, with `0.027692 WETH` to be earned per block for 6,500 blocks (180 / 6,500).
+  - The total amount of LOOKS staked from ALL users is 1,000,000 LOOKS.
+  - This means that User A will be allocated: `0.027692 * (10,000 / 1,000,000) = 0.00027692 WETH` at block #6501.
+- At block #6502,
+  - Assuming User A's stake does not change, but the total amount of LOOKS staked from all users increases to 1,500,000 LOOKS, then User A will be allocated: `0.027692 * (10,000 / 1,500,000) = 0.00018641 WETH` at block #6502.
+- This calculation each block will then continue for another 6,498 blocks (since our example covers a 6,500 block period), with 0.027692 WETH as the amount to be earned per block.
+- The `WETH fees generated from trades` on the LooksRare platform in the 6,500-block period between block #6501 and block #13000 will then be used as the rewards to be distributed linearly over the next period, which will be from block #13001 and #19500.
+
+With discussing the tokenmics of LooksRare, you may now wonder its economic model and how does the model support the platform. As we mentioned above, the math behind each rewards is straighforward. You might noticed that they have a similar pattern: `rewards = (# of User's XXX / # of Total XXX) * Periodical XXX Bonus`. Such simplicity has both pros and cons. On the one hand, it's easy to come up with and implement. Users can understand it quickly and start playing with the platform & the tokens. Not like DeFi project, NFT marketplace should be straighforward for the users to use since the users might not be interested in complicated math formulas as the ones of DeFi. On the other hand, speculators can find the weakness of simple rewarding mechanism more easily. [Wash trading](https://docs.looksrare.org/about/rewards/trading-rewards#what-happens-if-theres-wash-trading) is one of the example that shows the economic model is exposed to such "attack". I made a circular flow chart to explain the economic model clearly:
+
+![](https://i.imgur.com/DrjSDBI.png)
+
+The initial airdrop attracted valuable users from OpenSea to list NFT on LooksRare --> Token in circulation increases and there are NFTs coming to the platform. Trading rewards boost the trading volume --> Platform collects platform fee in WETH as staking rewards to give back to stakers --> Staking rewards APR increases (up to 1,000% not long after inital launch) so that users tend to stake their LOOKS token --> Token in circulation decreases. The token price increases as the platform gets more popular and the token in circulation gets smaller --> More people comes to use the platform and contribute to trading volume, then the circulation continues. Wash trading could happen since the value of LOOKS tokens earned was high enough to cover the cost of platform fee in WETH.
+
+![](https://i.imgur.com/9gz4s8N.png)
+
+However, the model can also be suffering from "Token value death spiral" because of external factors like crypto/NFT [bear market](https://www.investopedia.com/terms/b/bearmarket.asp). When it's bear market, trading volume decreases drastically --> staking rewards APR decreases and token in circulation increases --> token value decreases so many users will leave --> trading volume keeps decreasing and the "death spiral" begins.
+
+As these two circular flow charts suggests, LooksRare is strongly binded to LOOKS token. At the time of writing, LOOKS token price is `$0.2647`. If the team wants to enter the healthy circulation again in the next bull market, they have to improve the platform and refine the rewarding model to attract and retain users.
+
+That's it for the **business side** of LooksRare. Let's now have a glance on the **technical side**.
+
+All the deployed contract addresses can be found [here](https://docs.looksrare.org/developers/deployed-contract-addresses). I only picked some of the interesting ones to discuss due to space limitations. I may wrote another report to analyse the technical architecture of the LooksRare.
+
+Let's first look at the core of [LooksRare exchange](https://github.com/LooksRare/contracts-exchange-v1/blob/master/contracts/LooksRareExchange.sol). It execute NFT trade after the buyer and the seller have agreed on a price.
+
+```solidity contracts-exchange-v1/contracts/LooksRareExchange.sol focus=1:15
+/**
+  * @notice Constructor
+  * @param _currencyManager currency manager address
+  * @param _executionManager execution manager address
+  * @param _royaltyFeeManager royalty fee manager address
+  * @param _WETH wrapped ether address (for other chains, use wrapped native asset)
+  * @param _protocolFeeRecipient protocol fee recipient
+  */
+constructor(
+    address _currencyManager,
+    address _executionManager,
+    address _royaltyFeeManager,
+    address _WETH,
+    address _protocolFeeRecipient
+) {
+    // Calculate the domain separator
+    DOMAIN_SEPARATOR = keccak256(
+        abi.encode(
+            0x8b73c3c69bb8fe3d512ecc4cf759cc79239f7b179b0ffacaa9a75d522b39400f, // keccak256("EIP712Domain(string name,string version,uint256 chainId,address verifyingContract)")
+```
+
+In the constructor, we instantiate the value of important variables like the addresses of smart contracts we are interacting with and the fee recipients.
+
+```solidity contracts-exchange-v1/contracts/LooksRareExchange.sol
+/**
+  * @notice Cancel all pending orders for a sender
+  * @param minNonce minimum user nonce
+  */
+function cancelAllOrdersForSender(uint256 minNonce) external {
+    require(minNonce > userMinOrderNonce[msg.sender], "Cancel: Order nonce lower than current");
+    require(minNonce < userMinOrderNonce[msg.sender] + 500000, "Cancel: Cannot cancel more orders");
+    userMinOrderNonce[msg.sender] = minNonce;
+
+    emit CancelAllOrders(msg.sender, minNonce);
+}
+
+/**
+  * @notice Cancel maker orders
+  * @param orderNonces array of order nonces
+  */
+function cancelMultipleMakerOrders(uint256[] calldata orderNonces) external {
+    require(orderNonces.length > 0, "Cancel: Cannot be empty");
+
+    for (uint256 i = 0; i < orderNonces.length; i++) {
+        require(orderNonces[i] >= userMinOrderNonce[msg.sender], "Cancel: Order nonce lower than current");
+        _isUserOrderNonceExecutedOrCancelled[msg.sender][orderNonces[i]] = true;
+    }
+
+    emit CancelMultipleOrders(msg.sender, orderNonces);
+}
+```
+
+These two functions are for cancelling orders. LooksRare like OpenSea uses a system of hybrid orders (off-chain/on-chain) which incorporates off-chain signatures (these are called Maker Orders) and on-chain orders (called Taker Orders). LooksRare uses exclusively [EIP-712](https://eips.ethereum.org/EIPS/eip-712) signatures, which provide key benefits for users such as greater readability for humans in the message they sign. A maker order is a passive order, which can be executed (if not cancelled!) against a taker order after it is signed. Since the execution of a maker order is done once a taker order matches on-chain, network gas fees are never paid by the maker user.
+
+There are three functions to match maker orders with taker orders and let's look at the first one.
+
+This function matches a maker sell order against a taker buy order if the currecny is ether or wrapped ether:
+
+First we do some sanity checks:
+
+```solidity contracts-exchange-v1/contracts/LooksRareExchange.sol focus=6:12
+/**
+  * @notice Match ask with a taker bid order using ETH
+  * @param takerBid taker bid order
+  * @param makerAsk maker ask order
+  */
+function matchAskWithTakerBidUsingETHAndWETH(
+    OrderTypes.TakerOrder calldata takerBid,
+    OrderTypes.MakerOrder calldata makerAsk
+) external payable override nonReentrant {
+    require((makerAsk.isOrderAsk) && (!takerBid.isOrderAsk), "Order: Wrong sides");
+    require(makerAsk.currency == WETH, "Order: Currency must be WETH");
+    require(msg.sender == takerBid.taker, "Order: Taker must be the sender");
+
+    // If not enough ETH to cover the price, use WETH
+    if (takerBid.price > msg.value) {
+        IERC20(WETH).safeTransferFrom(msg.sender, address(this), (takerBid.price - msg.value));
+    } else {
+        require(takerBid.price == msg.value, "Order: Msg.value too high");
+    }
+```
+
+Then we transfer the payment amount to this smart contract in ether or wrapped ether
+
+```solidity contracts-exchange-v1/contracts/LooksRareExchange.sol focus=1:9
+// If not enough ETH to cover the price, use WETH
+if (takerBid.price > msg.value) {
+    IERC20(WETH).safeTransferFrom(msg.sender, address(this), (takerBid.price - msg.value));
+} else {
+    require(takerBid.price == msg.value, "Order: Msg.value too high");
+}
+
+// Wrap ETH sent to this contract
+IWETH(WETH).deposit{value: msg.value}();
+
+// Check the maker ask order
+bytes32 askHash = makerAsk.hash();
+_validateOrder(makerAsk, askHash);
+```
+
+Then we check the signature of the sell order. There is no need to check the signature of the buy order since only the buyer can send the buy order.
+
+```solidity contracts-exchange-v1/contracts/LooksRareExchange.sol focus=1:3
+// Check the maker ask order
+bytes32 askHash = makerAsk.hash();
+_validateOrder(makerAsk, askHash);
+
+// Retrieve execution parameters
+(bool isExecutionValid, uint256 tokenId, uint256 amount) = IExecutionStrategy(makerAsk.strategy)
+    .canExecuteTakerBid(takerBid, makerAsk);
+```
+
+Then we check if the payment amount is enough:
+
+```solidity contracts-exchange-v1/contracts/LooksRareExchange.sol focus=1:4
+// Retrieve execution parameters
+(bool isExecutionValid, uint256 tokenId, uint256 amount) = IExecutionStrategy(makerAsk.strategy)
+    .canExecuteTakerBid(takerBid, makerAsk);
+
+require(isExecutionValid, "Strategy: Execution invalid");
+
+// Update maker ask order status to true (prevents replay)
+_isUserOrderNonceExecutedOrCancelled[makerAsk.signer][makerAsk.nonce] = true;
+```
+
+Then we save the nonce of the order in the mapping to prevent [replay attack](https://en.wikipedia.org/wiki/Replay_attack) of the order.
+
+```solidity contracts-exchange-v1/contracts/LooksRareExchange.sol
+// Update maker ask order status to true (prevents replay)
+_isUserOrderNonceExecutedOrCancelled[makerAsk.signer][makerAsk.nonce] = true;
+```
+
+Then we transfer the payment to the seller, [royalties](https://twitter.com/LooksRare/status/1558505982069579776) to the NFT creator, and the platform fees to the LooksRare.
+
+```solidity contracts-exchange-v1/contracts/LooksRareExchange.sol focus=4:12
+// Update maker ask order status to true (prevents replay)
+_isUserOrderNonceExecutedOrCancelled[makerAsk.signer][makerAsk.nonce] = true;
+
+// Execution part 1/2
+_transferFeesAndFundsWithWETH(
+    makerAsk.strategy,
+    makerAsk.collection,
+    tokenId,
+    makerAsk.signer,
+    takerBid.price,
+    makerAsk.minPercentageToAsk
+);
+```
+
+Finally, we transfer the NFT to the buyer and emit TakerBid event
+
+```solidity contracts-exchange-v1/contracts/LooksRareExchange.sol
+// Execution part 2/2
+_transferNonFungibleToken(makerAsk.collection, makerAsk.signer, takerBid.taker, tokenId, amount);
+
+emit TakerBid(
+    askHash,
+    makerAsk.nonce,
+    takerBid.taker,
+    makerAsk.signer,
+    makerAsk.strategy,
+    makerAsk.currency,
+    makerAsk.collection,
+    tokenId,
+    amount,
+    takerBid.price
+);
+```
+
+The other two functions are similar so I'll leave them for you to explore.
+
+--- needs quillbot
 
 ## Competitor Review
 
-(make graphs to explain)
+We've talked a lot about LooksRare itself and we have enough knowledge to compare it with competitors.
 
-- How is it different from other NFT marketplaces (OpenSea, X2Y2, Gem.xyz, etc.)
-  (community based, actively updating)
-  - 对 UI 的更新和上心程度 https://twitter.com/LooksRare/status/1565356794138230784?s=20&t=20j-YnQqU0MV1zzyfnmDVA
-  - 版税的支持 https://twitter.com/LooksRareCN/status/1563174479739490304?s=20&t=2URH9FRzFEjm_jn3gRXU8Q 什么是 Nft 版税 https://zhuanlan.zhihu.com/p/467412129
-- Short review of OpenSea, X2Y2, Gem.xyz, etc.
+- OpenSea
+  - Overview: OpenSea has styled itself as the world's largest NFT marketplace. There are approximately 700 projects which range from trading card games to collectible games to digital art projects and name systems such as ENS (Ethereum Name Service). Founded in 2017, with over 200 employees, 600k users, 80million NFTs, and $20billion in trading volume, OpenSea supports multiple blockchains, with Ethereum being the largest.
+  - In 2021, nearly 90% of NFT trading volume happened on OpenSea.
+    - Since it's the dominant of NFT industry, the user stickiness makes other marketplaces hard to attract users in the first place.
+  - Platform Fee: `2.5%`
+  - Offering three different options for listing:
+    - Fixed Price Listings: Fixed price set by the seller
+    - English Auctions: The seller sets the minimum price, waits for bids to climb up, and accepts the highest. Here, the seller can set a minimum reserve price for the NFT.
+    - Dutch Auction: Sellers set starting price, an end price and duration. You start the auction at a high price and let the price decline over time. People will then buy the NFT at the price they see fit.
+  - Backed by Venture Capital and does not give back to the community (Web3 principles).
+  - Does NOT support batch buy/sweep floors
+- gem.xyz
+  - Overview: An NFT marketplace aggregator that collects all NFT transaction information from different chains and consolidates them into a single place - improves the efficiency and effectiveness of the transaction
+  - Features:
+    - Buy multiple NFTs in a single transaction
+    - [Sweep](https://thedefiant.io/what-is-sweep-the-floor) the collection floor
+    - Pay with any token (or multiple ones)
+    - save tons gas compared to buying on the marketplaces directly
+- X2Y2
+  - Similar UI to OpenSea, Similar economic model, marketing strategy, and docs to LooksRare
+  - The math of rewards is more complex than LooksRare's
+  - Does support batch buy/sweep floors
 
-  - Looksrare vs. Opensea https://mooning.com/looksrare-vs-opensea-a-review/ https://onxrp.com/analysis-of-nft-marketplaces/
-    - opensea 为什么能成为巨头 讲讲发展史
-  - x2y2
-
-    - https://twitter.com/sophia56169583/status/1565911044769189888?s=20&t=c91hHwOyKXU0sbwv_O_YxQ
-    - ama https://mirror.xyz/x2y2.eth/bU2wOZqyrazeiFs3LLlSpvKDtpRm3AbuQvrO0jyH7B0
-    - https://docs.x2y2.io/guides/about-x2y2 whitepaper
-    - https://medium.com/p/d09130e498f3 https://mirror.xyz/cryptoscott.eth/rYrs2FCECVth3ArKnpp-ROkFDWGdYmhTAQmC_U-cZC4
-    - https://mirror.xyz/0xE8C078C600132AB68685eA06a5f7C7bC1A349b76/BToO2gTWIaqaqstwZHMUYOJaVEUkkQEGH8kkvGKK_R4
-
-- Difference (pros and cons of Looksrare comparing to other platforms)
-  - Business aspect
-  - on-chain data analysis (每个 project 的数据和整个 nft 市场的趋势做交叉分析)
-  - code quality
-
-## Case Study: Vampire attack
-
-- sushi vs. uni (vampire attack in defi shows that it won't work --> prove this statement)
-- looksrare vs. opensea https://medium.com/the-coinbase-blog/vampire-attack-looksrare-vs-opensea-c3b4107cd4db
-- x2y2 vs. opensea (frontend is basically the same --> x2y2 doesn't seem legit)
-  https://www.youtube.com/watch?v=dkp2D3sY1fE&ab_channel=PlayerM
-
-## Challenges and Opportunities
-
-- Economic model advantages and problems
+It's worth mentioning that [LooksRare has been integrated with geniexyz](https://twitter.com/LooksRare/status/1512762316408107008) to allow users to sweep the floor like they can do it using gem.xyz or [X2Y2](https://twitter.com/the_x2y2/status/1497563809208500232?lang=en). These actively integrated new features (LooksRare's Collection offer, Trait offer, and Multi-cancellation) make LooksRare and X2Y2 competitive to OpenSea in the long run as they are making users' lives easier.
 
 ## Closing Thoughts
 
-Summary of the review and the main conclusion
-
-opensea 前期也不好过,所以不一定要悲观看待现在的 looks
-
-- looksrare v2 https://docs.looksrare.org/blog/space-recap-things-you-should-know
-- looksrare v2 https://twitter.com/Looksfans/status/1535149597651513344
+New NFT marketplaces like LooksRare compete with market dominant OpenSea in a Web3 way by putting the community first. LooksRare and X2Y2 have successfully drawing attention and users from OpenSea through "Vampire Attack" but how to retain users is currently the most important problem. Though at the time of writing, the price of LOOKS ($0.26) and X2Y2 ($0.13) are lower than most of the users expected, we see that the team and community are still actively building the platform to make it better. The token prices reflect that the current NFT [bear market](https://www.investopedia.com/terms/b/bearmarket.asp) has a huge impact on these marketplaces. However, we still cannot say it's the end for LooksRare, X2Y2, and other platforms since the trading volume on OpenSea is also unsatisfactory. I believe if OpenSea has its own token, the price will also fall drastically. OpenSea was founded in 2017 but it success until NFT bull market in 2021. There will be platform(s) in the next bull market to end the dominance of OpenSea.
 
 ---
 
@@ -101,7 +432,12 @@ opensea 前期也不好过,所以不一定要悲观看待现在的 looks
 
 ## References
 
-[1] Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus vitae congue mauris rhoncus. Pellentesque massa placerat duis ultricies lacus sed turpis tincidunt id.
+Mapping the NFT revolution: market trends, trade networks, and visual features, https://www.nature.com/articles/s41598-021-00053-8
 
-Preview image source: [LOOKSRARE MARKETPLACE: WHAT IS ALL THE HYPE
-ABOUT?](https://nftnewstoday.com/2022/03/26/what-is-looksrare-marketplace/)
+LooksRare — Upcoming competitor of Opensea, https://blog.cryptostars.is/looksrare-decentralised-nft-marketplace-58adbce39d07
+
+LooksRare NFT marketplace after a month - the past, present and the way ahead? (NFTmemo #1), https://mirror.xyz/mattbullish.eth/HiN9mtzqex0OVoURXCQZU6yLxmPal6md5qVnAk2K5v0
+
+NonFungible, Quarterly NFT Market Report Q2 2022, https://nonfungible.com/reports/2022/en/q2-quarterly-nft-market-report
+
+A Comprehensive Analysis of 5 Popular NFT Marketplaces, https://onxrp.com/analysis-of-nft-marketplaces/
